# crewAI-agent-example

./: 0_create_prompt.ipynb  1_create_lambda.ipynb  3_create_agent.ipynb  README.md  config.yml  crewai_code_gen_and_exec.ipynb  generated_code.py  globals.py  openapi.json  pyproject.toml  response.txt
agent_response/: final_code.py
lambda/: Dockerfile  build_and_push.sh  image  index.py  requirements.txt  tools.py
